## Process this file with automake to produce Makefile.in
lib_LIBRARIES = libace-radius.a
libace_radius_a_SOURCES = Radius.h \
                      RadiusAddress.cpp \
                      RadiusAddress.h \
                      RadiusAttribute.cpp \
                      RadiusAttribute.h \
                      RadiusPacket.cpp \
                      RadiusPacket.h \
                      RadiusSecret.cpp \
                      RadiusSecret.h \
                      RadiusClientConnection.cpp \
                      RadiusClientConnection.h \
                      RadiusClientStack.cpp \
                      RadiusClientStack.h \
                      RadiusServerStack.cpp \
                      RadiusServerStack.h \
                      md5.cpp \
                      md5.h
library_includedir=$(includedir)/ace-radius
library_include_HEADERS = Radius.h \
                      RadiusAddress.h \
                      RadiusAttribute.h \
                      RadiusPacket.h \
                      RadiusSecret.h \
                      RadiusClientStack.h \
                      RadiusServerStack.h
